--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <button id="jsSave">SAVE</button>
                 <button id="jsClear">CLEAR</button>
         </div>
+        <div class="cursor "></div>
         <div class="controls__colors" id=jsColors>
             <div class="controls__color JsColor" style="background-color:white "></div>
             <div class="controls__color JsColor" style="background-color:#2c2c2c "></div>
