--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <div class="cursor brush"></div>
     <canvas id="jsCanvas" class="canvas"></canvas>
     <div class="controls">
         <div class="controls__btns">
@@ -17,7 +18,6 @@
                 <button id="jsSave">SAVE</button>
                 <button id="jsClear">CLEAR</button>
         </div>
-        <div class="cursor "></div>
         <div class="controls__colors" id=jsColors>
             <div class="controls__color JsColor" style="background-color:white "></div>
             <div class="controls__color JsColor" style="background-color:#2c2c2c "></div>
